# lines

./: .gitignore  Cargo.toml
config/: configuration.yml  log4rs.yml
debian/: build-deb.sh  changelog  control  dirs  lines-agent.install  lines-agent.service  lines-agent_0.1.dsc  lines-agent_0.1_all.deb  lines-agent_0.1_amd64.build  lines-agent_0.1_amd64.changes  lines-agent_0.1ubuntu1.dsc  lines-agent_0.1ubuntu1_all.deb  lines-agent_0.1ubuntu1_amd64.build  lines-agent_0.1ubuntu1_amd64.changes
debian/source/: options
packaging/debian/: control  lines-agent.install  rules
packaging/linux/: lines-agent.service
packaging/windows/: build-msi.ps1  installer.msi  installer.wxs
src/: lib.rs  main.rs
src/sensors/: cpu_time.rs  disk_space.rs  mod.rs  physical_memory.rs
windows/: build-msi.ps1  installer.msi
