[package]
name = "lines"
version = "0.1.0"
authors = ["Mitch Spradlin <mitch@spradlin.net>"]

[dependencies]
log = "0.4.1"
log4rs = "0.8.0"
rayon = "1.0.0"
statsd = "0.10.0"
cadence = "0.13.2"
lazy_static = "1.0"

[target.'cfg(windows)'.dependencies]
winapi = "0.3.4"
kernel32-sys = { version = "0.2.2", features = [] }